# famulus

./: .gitignore  CLAUDE.md  LICENSE  PROFILES.md  README.md  TESTING.md  lessons  pyrightconfig.json  pytest.ini  refactor-plan
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.githooks/: check-skill-dependencies  pre-commit  pre-push
agents/: assistant.md  coauthor.md  coder.md  collab.md
docs/: audit_and_drift.md  blueprint_search.md  certification_and_drift.md  installation.md  launchers.md  skill-blueprints.md  skills.md
docs_tooling/: __init__.py  catalog.py  render.py  repo_browser.py
graphs/: README.md  graph_specs.py  render-graphs.py  render_graph_with_elk.cjs
hooks/: hooks.json  inject_dispatcher_context.py
lessons/: 2026-07-03.md  2026-07-04.md  2026-07-05.md  2026-07-06.md  2026-07-07.md  2026-07-09.md  2026-07-13.md
llmhooks/: __init__.py  inject_dispatcher_context.py  registry.py
profiles/: assistant.config.toml  assistant_claude_setting.json  coauthor.config.toml  coauthor_claude_setting.json  coder.config.toml  collab.config.toml  collab_claude_setting.json
references/: document-profile-schema.md  llm-interface-design.md  skill-blueprint-template.yaml  skill-categories.md  skill-guidelines.md  skill-refactoring-catalog.md  skill-smells.md
script_dispatcher/: pyproject.toml
script_dispatcher/src/script_dispatcher/: __init__.py  cli.py  core.py
scripts/: generate-doc-artifacts.py  generate-previews.py  generate-settings-table.sh  generate-skills-table.py  invoke_skill_export.py  run-python-tests.py  (+3 more)
(+699 files in other folders)
